# generative-ai-for-beginners

./: pyproject.toml
.devcontainer/: enviroment.yml
ai4b/: pyproject.toml
