[tool.poetry]
name = "ai4b"
version = "0.1.0"
description = ""
authors = ["Lucas A. Ugartemendia <ugartelucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.16"
python-dotenv = "^0.13"
ipywidgets="7.7.1"
matplotlib="3.7.0"
numpy="1.24.2"
pandas="1.5.3"
tqdm="4.64.0"
tiktoken="0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
