[tool.poetry]
name = "ai4b"
version = "0.1.0"
description = ""
authors = ["Lucas A. Ugartemendia <ugartelucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.16"
python-dotenv = "^0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
